added everything SE setup.bat

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -1965,6 +1965,94 @@
     "):\n",
     "    step[\"messages\"][-1].pretty_print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "4ba1f4fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the extracted text from the image:\n",
+      "\n",
+      "```\n",
+      "आयकर विभाग\n",
+      "INCOME TAX DEPARTMENT\n",
+      "\n",
+      "भारत सरकार\n",
+      "GOVT. OF INDIA\n",
+      "\n",
+      "स्थायी लेखा संख्या कार्ड\n",
+      "Permanent Account Number Card\n",
+      "\n",
+      "MWDPK3138A\n",
+      "\n",
+      "नाम / Name\n",
+      "KSHITIJ KUMRAWAT\n",
+      "\n",
+      "पिता का नाम / Father's Name\n",
+      "PRADEEP KUMRAWAT\n",
+      "\n",
+      "जन्म की तारीख / Date of Birth\n",
+      "20/03/2004\n",
+      "\n",
+      "हस्ताक्षर / Signature\n",
+      "```\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## adding images encoding as tool\n",
+    "import base64\n",
+    "\n",
+    "def encode_image(image_path):\n",
+    "    \"\"\"Encode an image file to a Base64 string.\"\"\"\n",
+    "    with open(image_path, \"rb\") as image_file:\n",
+    "        return base64.b64encode(image_file.read()).decode('utf-8')\n",
+    "\n",
+    "# Example usage: Replace with your image file\n",
+    "image_path = \"C:\\\\KshitijDocs\\\\KshitijDocs\\\\pancard.jpg\"\n",
+    "base64_image = encode_image(image_path)\n",
+    "\n",
+    "from langchain_core.messages import HumanMessage\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "# Initialize the OpenAI multimodal model\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", max_tokens=1024)\n",
+    "\n",
+    "# Create the message payload for the chat model\n",
+    "message = HumanMessage(\n",
+    "    content=[\n",
+    "        {\n",
+    "            \"type\": \"text\",\n",
+    "            \"text\": \"Extract all the text from this image and list it clearly.\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"type\": \"image_url\",\n",
+    "            \"image_url\": {\"url\": f\"data:image/jpeg;base64,{base64_image}\"},\n",
+    "        },\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Invoke the model\n",
+    "response = llm.invoke([message])\n",
+    "\n",
+    "# Print the extracted text\n",
+    "print(response.content)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "071c3534",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
