testing semantic file searching

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -2107,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "c0e28579",
    "metadata": {},
    "outputs": [
@@ -2115,9 +2115,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 2635 files in 59.5s\n",
-      "Could not write to C:\\c_drive_file_index.json: [Errno 13] Permission denied: 'C:\\\\c_drive_file_index.json'\n",
-      "Saved to: c_drive_file_index.json\n"
+      "Found 2648 files in 39.8s\n",
+      "Could not write to C:\\file_paths.json: [Errno 13] Permission denied: 'C:\\\\file_paths.json'\n",
+      "Saved to: file_paths.json\n"
      ]
     }
    ],
@@ -2152,7 +2152,7 @@
     "matches = find_files_by_extension(\"C:\\\\\")\n",
     "print(f\"Found {len(matches)} files in {time.time() - start:.1f}s\")\n",
     "\n",
-    "for out in [\"C:\\\\c_drive_file_index.json\", \"c_drive_file_index.json\"]:\n",
+    "for out in [\"C:\\\\file_paths.json\", \"file_paths.json\"]:\n",
     "    try:\n",
     "        with open(out, \"w\", encoding=\"utf-8\") as f:\n",
     "            json.dump(matches, f, ensure_ascii=False, indent=2)\n",
@@ -2160,56 +2160,6 @@
     "        break\n",
     "    except Exception as e:\n",
     "        print(f\"Could not write to {out}: {e}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "085c5888",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2mResolved \u001b[1m238 packages\u001b[0m \u001b[2min 13.38s\u001b[0m\u001b[0m\n",
-      "\u001b[2mPrepared \u001b[1m1 package\u001b[0m \u001b[2min 615ms\u001b[0m\u001b[0m\n",
-      "\u001b[2mInstalled \u001b[1m1 package\u001b[0m \u001b[2min 71ms\u001b[0m\u001b[0m\n",
-      " \u001b[32m+\u001b[39m \u001b[1mjq\u001b[0m\u001b[2m==1.10.0\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!uv add jq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "6afdbf4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "from pathlib import Path\n",
-    "file_path = 'c_drive_file_index.json'\n",
-    "from langchain.document_loaders import JSONLoader\n",
-    "# The JSON file contains an array of file path strings (not objects with \"lyrics\").\n",
-    "# Use a jq schema that extracts each string as the document text and stores the path in metadata.\n",
-    "jq_schema = '.[] | {text: ., metadata: {path: .}}'\n",
-    "\n",
-    "data = json.loads(Path(file_path).read_text())\n",
-    "\n",
-    "# If the file is empty, avoid calling the loader\n",
-    "if not data:\n",
-    "    docs = []\n",
-    "else:\n",
-    "    loader = JSONLoader(\n",
-    "        file_path=file_path,\n",
-    "        jq_schema=jq_schema,\n",
-    "        text_content=False\n",
-    "    )\n",
-    "    docs = loader.load()\n"
    ]
   },
   {
@@ -3327,6 +3277,222 @@
    ],
    "source": [
     "vectorstore.similarity_search(\"caste\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7fb42774",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[sdiskpart(device='C:\\\\', mountpoint='C:\\\\', fstype='NTFS', opts='rw,fixed'),\n",
+       " sdiskpart(device='D:\\\\', mountpoint='D:\\\\', fstype='FAT32', opts='rw,removable')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_drives = psutil.disk_partitions()\n",
+    "all_drives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4aee1950",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'device': 'C:\\\\', 'mountpoint': 'C:\\\\', 'fstype': 'NTFS', 'type': 'Local'},\n",
+       " {'device': 'D:\\\\', 'mountpoint': 'D:\\\\', 'fstype': 'FAT32', 'type': 'Local'}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import psutil\n",
+    "import os\n",
+    "\n",
+    "def analyze_drives():\n",
+    "    \"\"\"\n",
+    "    Identifies and categorizes all connected drives as either 'Local' or 'Network'.\n",
+    "    \"\"\"\n",
+    "    all_drives = psutil.disk_partitions()\n",
+    "    categorized_drives = []\n",
+    "\n",
+    "    for partition in all_drives:\n",
+    "        drive_type = \"\"\n",
+    "        # In Windows, the 'opts' string can indicate a network drive.\n",
+    "        # Also, the device path for mapped network drives often starts with '\\\\'.\n",
+    "        # For other OSes, checking the file system type can be an indicator.\n",
+    "        if 'remote' in partition.opts or partition.device.startswith('\\\\\\\\'):\n",
+    "            drive_type = \"Network\"\n",
+    "        # The fstype can also give clues on Windows for non-network drives\n",
+    "        elif partition.fstype:\n",
+    "            drive_type = \"Local\"\n",
+    "        else:\n",
+    "            # This can happen for drives that are present but not ready (e.g., empty CD-ROM)\n",
+    "            drive_type = \"Unknown\"\n",
+    "\n",
+    "        categorized_drives.append({\n",
+    "            \"device\": partition.device,\n",
+    "            \"mountpoint\": partition.mountpoint,\n",
+    "            \"fstype\": partition.fstype,\n",
+    "            \"type\": drive_type\n",
+    "        })\n",
+    "    return categorized_drives\n",
+    "\n",
+    "drives = analyze_drives()\n",
+    "drives\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "442bf662",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drives[0]['device']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43483c23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "Found 2650 files in 32.1s\n",
+      "Saved to: file_paths.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os, json, time\n",
+    "\n",
+    "ALLOWED_EXTS = ('.pdf', '.doc', '.docx', '.jpg', '.jpeg', '.png', '.ppt', '.pptx', '.xls', '.xlsx', '.csv')\n",
+    "EXCLUDE_DIRS = [\"Windows\", \"Program Files\", \"Program Files (x86)\", \"PerfLogs\", \"$Recycle.Bin\", \"System Volume Information\", \"AppData\", \"Microsoft\"]\n",
+    "\n",
+    "\n",
+    "def should_exclude(path):\n",
+    "    return any(excl.lower() in path.lower() for excl in EXCLUDE_DIRS)\n",
+    "\n",
+    "def find_files_by_extension(root_path=\"C:\\\\\", extensions=ALLOWED_EXTS):\n",
+    "    matched = []\n",
+    "    def scan_dir(path):\n",
+    "        try:\n",
+    "            for entry in os.scandir(path):\n",
+    "                if entry.is_dir(follow_symlinks=False):\n",
+    "                    if not should_exclude(entry.path):\n",
+    "                        scan_dir(entry.path)\n",
+    "                elif entry.is_file() and entry.name.lower().endswith(extensions):\n",
+    "                    if not (entry.name.startswith('~') or entry.name.startswith('.')):\n",
+    "                        matched.append(entry.path)\n",
+    "        except PermissionError:\n",
+    "            pass\n",
+    "        except OSError as e:\n",
+    "            print(f\"Access error: {e}\")\n",
+    "    scan_dir(root_path)\n",
+    "    return matched\n",
+    "\n",
+    "start = time.time()\n",
+    "matches = find_files_by_extension(\"C:\\\\\")\n",
+    "print(type(matches))\n",
+    "print(f\"Found {len(matches)} files in {time.time() - start:.1f}s\")\n",
+    "\n",
+    "for out in [\"file_paths.json\"]:\n",
+    "    try:\n",
+    "        with open(out, \"w\", encoding=\"utf-8\") as f:\n",
+    "            json.dump(matches, f, ensure_ascii=False, indent=2)\n",
+    "        print(f\"Saved to: {out}\")\n",
+    "        break\n",
+    "    except Exception as e:\n",
+    "        print(f\"Could not write to {out}: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77a0c40f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## creating the final pipeling \n",
+    "\n",
+    "## first detect all the drives and store in list \n",
+    "import psutil\n",
+    "import os \n",
+    "import json\n",
+    "import time\n",
+    "import win32\n",
+    "\n",
+    "class Detect_and_Create_file_VStore: \n",
+    "    \"\"\" Class responsible for detecting drives and creating file vector store for file searching\"\"\"\n",
+    "\n",
+    "    ALLOWED_EXTS = ('.pdf', '.doc', '.docx', '.jpg', '.jpeg', '.png', '.ppt', '.pptx', '.xls', '.xlsx', '.csv')\n",
+    "    EXCLUDE_DIRS = [\"Windows\", \"Program Files\", \"Program Files (x86)\", \"PerfLogs\", \"$Recycle.Bin\", \"System Volume Information\", \"AppData\", \"Microsoft\"]\n",
+    "\n",
+    "\n",
+    "    def should_exclude(self, path):\n",
+    "        return any(excl.lower() in path.lower() for excl in self.EXCLUDE_DIRS)\n",
+    "\n",
+    "    def find_files_by_extension(self, root_path, extensions=ALLOWED_EXTS):\n",
+    "        matched = []\n",
+    "        def scan_dir(path):\n",
+    "            try:\n",
+    "                for entry in os.scandir(path):\n",
+    "                    if entry.is_dir(follow_symlinks=False):\n",
+    "                        if not should_exclude(entry.path):\n",
+    "                            scan_dir(entry.path)\n",
+    "                    elif entry.is_file() and entry.name.lower().endswith(extensions):\n",
+    "                        if not (entry.name.startswith('~') or entry.name.startswith('.')):\n",
+    "                            matched.append(entry.path)\n",
+    "            except PermissionError:\n",
+    "                pass\n",
+    "            except OSError as e:\n",
+    "                print(f\"Access error: {e}\")\n",
+    "        scan_dir(root_path)\n",
+    "        return matched\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "40f1eae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list = psutil.disk_partitions()\n"
    ]
   }
  ],
