coded sementic search engine pipeline

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -1968,43 +1968,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "4ba1f4fd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Here is the extracted text from the image:\n",
-      "\n",
-      "```\n",
-      "आयकर विभाग\n",
-      "INCOME TAX DEPARTMENT\n",
-      "\n",
-      "भारत सरकार\n",
-      "GOVT. OF INDIA\n",
-      "\n",
-      "स्थायी लेखा संख्या कार्ड\n",
-      "Permanent Account Number Card\n",
-      "\n",
-      "MWDPK3138A\n",
-      "\n",
-      "नाम / Name\n",
-      "KSHITIJ KUMRAWAT\n",
-      "\n",
-      "पिता का नाम / Father's Name\n",
-      "PRADEEP KUMRAWAT\n",
-      "\n",
-      "जन्म की तारीख / Date of Birth\n",
-      "20/03/2004\n",
-      "\n",
-      "हस्ताक्षर / Signature\n",
-      "```\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## adding images encoding as tool\n",
     "import base64\n",
@@ -2206,7 +2173,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "id": "1bb45bda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pathlib import Path\n",
+    "file_path = 'c_drive_file_index.json'\n",
+    "from langchain.document_loaders import JSONLoader\n",
+    "jq_schema = '.[] | {text: ., metadata: {path: .}}'\n",
+    "\n",
+    "data = json.loads(Path(file_path).read_text())\n",
+    "\n",
+    "# If the file is empty, avoid calling the loader\n",
+    "if not data:\n",
+    "    docs = []\n",
+    "else:\n",
+    "    loader = JSONLoader(\n",
+    "        file_path=file_path,\n",
+    "        jq_schema=jq_schema,\n",
+    "        text_content=False\n",
+    "    )\n",
+    "    docs = loader.load()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "da931744",
    "metadata": {},
    "outputs": [],
@@ -2214,7 +2208,15 @@
     "from langchain_openai import OpenAIEmbeddings\n",
     "\n",
     "\n",
-    "embeddings = OpenAIEmbeddings()"
+    "embeddings = OpenAIEmbeddings()\n",
+    "from langchain_chroma import Chroma\n",
+    "\n",
+    "persist_directory = \"./chroma_db\"\n",
+    "vectorstore = Chroma(\n",
+    "        collection_name=\"paths\",\n",
+    "        embedding_function=embeddings,\n",
+    "        persist_directory=persist_directory\n",
+    ")"
    ]
   },
   {
@@ -3442,57 +3444,236 @@
    "execution_count": null,
    "id": "77a0c40f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Scanning drive: C:\\\n",
+      "INFO:root:Found 3381 matching files\n",
+      "INFO:root:Removing existing Chroma DB at ./chroma_db\n",
+      "WARNING:root:Could not remove existing chroma db: [WinError 32] The process cannot access the file because it is being used by another process: './chroma_db\\\\712eb979-bb29-4d1c-a834-0292feb4bd98\\\\data_level0.bin'\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "INFO:root:Chroma vectorstore created successfully on attempt 1\n",
+      "INFO:root:Pipeline completed, vectorstore: <class 'langchain_chroma.vectorstores.Chroma'>\n"
+     ]
+    }
+   ],
    "source": [
-    "## creating the final pipeling \n",
-    "\n",
-    "## first detect all the drives and store in list \n",
-    "import psutil\n",
-    "import os \n",
-    "import json\n",
+    "# Updated pipeline cell: detect drives, gather file paths, remove existing chroma db, create/retry Chroma vectorstore\n",
+    "import os\n",
     "import time\n",
-    "import win32\n",
+    "import shutil\n",
+    "import logging\n",
+    "import psutil\n",
+    "from pathlib import Path\n",
+    "from langchain.schema import Document\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_chroma import Chroma\n",
     "\n",
-    "class Detect_and_Create_file_VStore: \n",
-    "    \"\"\" Class responsible for detecting drives and creating file vector store for file searching\"\"\"\n",
+    "logging.basicConfig(level=logging.INFO)\n",
     "\n",
+    "class Detect_and_Create_file_VStore:\n",
+    "    \"\"\"Detect drives, find files by extension and create a Chroma vectorstore.\n",
+    "       Removes existing chroma_db if present and retries on failures.\"\"\"\n",
     "    ALLOWED_EXTS = ('.pdf', '.doc', '.docx', '.jpg', '.jpeg', '.png', '.ppt', '.pptx', '.xls', '.xlsx', '.csv')\n",
-    "    EXCLUDE_DIRS = [\"Windows\", \"Program Files\", \"Program Files (x86)\", \"PerfLogs\", \"$Recycle.Bin\", \"System Volume Information\", \"AppData\", \"Microsoft\"]\n",
+    "    EXCLUDE_DIRS = [\"Windows\", \"Program Files\", \"Program Files (x86)\", \"PerfLogs\", \"$Recycle.Bin\",\n",
+    "                    \"System Volume Information\", \"AppData\", \"Microsoft\"]\n",
     "\n",
+    "    def __init__(self, persist_directory=\"./chroma_db\"):\n",
+    "        self.persist_directory = persist_directory\n",
+    "        self.vectorstore = None\n",
     "\n",
     "    def should_exclude(self, path):\n",
     "        return any(excl.lower() in path.lower() for excl in self.EXCLUDE_DIRS)\n",
     "\n",
-    "    def find_files_by_extension(self, root_path, extensions=ALLOWED_EXTS):\n",
+    "    def find_files_by_extension(self, root_path, extensions=None):\n",
+    "        extensions = extensions or self.ALLOWED_EXTS\n",
     "        matched = []\n",
     "        def scan_dir(path):\n",
     "            try:\n",
     "                for entry in os.scandir(path):\n",
     "                    if entry.is_dir(follow_symlinks=False):\n",
-    "                        if not should_exclude(entry.path):\n",
+    "                        if not self.should_exclude(entry.path):\n",
     "                            scan_dir(entry.path)\n",
     "                    elif entry.is_file() and entry.name.lower().endswith(extensions):\n",
     "                        if not (entry.name.startswith('~') or entry.name.startswith('.')):\n",
     "                            matched.append(entry.path)\n",
-    "            except PermissionError:\n",
-    "                pass\n",
-    "            except OSError as e:\n",
-    "                print(f\"Access error: {e}\")\n",
+    "            except (PermissionError, OSError):\n",
+    "                # skip directories we can't access\n",
+    "                return\n",
     "        scan_dir(root_path)\n",
     "        return matched\n",
-    "    \n",
-    "    \n",
-    "    "
+    "\n",
+    "    def _remove_existing_db(self):\n",
+    "        if os.path.exists(self.persist_directory):\n",
+    "            try:\n",
+    "                logging.info(\"Removing existing Chroma DB at %s\", self.persist_directory)\n",
+    "                shutil.rmtree(self.persist_directory)\n",
+    "            except Exception as e:\n",
+    "                logging.warning(\"Could not remove existing chroma db: %s\", e)\n",
+    "\n",
+    "    def create_file_vectorstore(self, file_paths, retries=3, delay=2):\n",
+    "        # create Document objects for Chroma\n",
+    "        docs = [Document(page_content=fp, metadata={\"path\": fp}) for fp in file_paths]\n",
+    "\n",
+    "        # remove existing DB before creating a fresh one\n",
+    "        self._remove_existing_db()\n",
+    "\n",
+    "        embeddings = OpenAIEmbeddings()\n",
+    "\n",
+    "        last_exc = None\n",
+    "        for attempt in range(1, retries + 1):\n",
+    "            try:\n",
+    "                vs = Chroma(collection_name=\"paths\", embedding_function=embeddings, persist_directory=self.persist_directory)\n",
+    "                # add documents (this will create DB files)\n",
+    "                vs.add_documents(docs)\n",
+    "                # persist if available\n",
+    "                if hasattr(vs, \"persist\"):\n",
+    "                    try:\n",
+    "                        vs.persist()\n",
+    "                    except Exception:\n",
+    "                        pass\n",
+    "                self.vectorstore = vs\n",
+    "                logging.info(\"Chroma vectorstore created successfully on attempt %d\", attempt)\n",
+    "                return vs\n",
+    "            except Exception as e:\n",
+    "                last_exc = e\n",
+    "                logging.exception(\"Attempt %d: Failed to create Chroma vectorstore: %s\", attempt, e)\n",
+    "                if attempt < retries:\n",
+    "                    time.sleep(delay)\n",
+    "        # if all attempts failed, raise the last exception\n",
+    "        raise RuntimeError(\"Failed to create Chroma vectorstore\") from last_exc\n",
+    "\n",
+    "    def run_pipeline(self, root_dirs=None):\n",
+    "        # default to all mounted partitions' mountpoints\n",
+    "        if root_dirs is None:\n",
+    "            root_dirs = [p.mountpoint for p in psutil.disk_partitions()]\n",
+    "        all_paths = []\n",
+    "        for root in root_dirs:\n",
+    "            try:\n",
+    "                logging.info(\"Scanning drive: %s\", root)\n",
+    "                all_paths.extend(self.find_files_by_extension(root))\n",
+    "            except Exception as e:\n",
+    "                logging.warning(\"Skipping drive %s due to error: %s\", root, e)\n",
+    "        logging.info(\"Found %d matching files\", len(all_paths))\n",
+    "        return self.create_file_vectorstore(all_paths)\n",
+    "\n",
+    "# Example usage (will run when this cell is executed):\n",
+    "try:\n",
+    "    obj = Detect_and_Create_file_VStore()\n",
+    "    vectorstore = obj.run_pipeline()\n",
+    "    logging.info(\"Pipeline completed, vectorstore: %s\", type(vectorstore))\n",
+    "except Exception as e:\n",
+    "    logging.exception(\"Pipeline failed: %s\", e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
+   "id": "1c07af45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[Document(id='d1fc87f4-a131-42b8-a43a-d96562a5c1b2', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (3).pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (3).pdf'),\n",
+       " Document(id='fe2ac6fe-8b2b-4ffc-9fa9-ba237ab91e0f', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final.pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final.pdf'),\n",
+       " Document(id='9a984015-4a5c-4e4e-a663-76e3bb19f3f7', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (1).pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (1).pdf'),\n",
+       " Document(id='62deefaf-3614-464f-b79d-14fef3984933', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (2).pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (2).pdf')]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorstore.similarity_search(\"project report\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "561c5aac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj = Detect_and_Create_file_VStore()\n",
+    "vectorstore = obj.run_pipeline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "63915ef4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['{\"text\": \"C:\\\\\\\\code\\\\\\\\UdemyGenai\\\\\\\\Langchain\\\\\\\\ProcodebaseAssignement\\\\\\\\Report.pdf\"',\n",
+       " '{\"text\": \"C:\\\\\\\\Users\\\\\\\\hp\\\\\\\\Downloads\\\\\\\\VCET UG Mini Project Report Model 12-10-19.docx\"',\n",
+       " '{\"text\": \"C:\\\\\\\\Users\\\\\\\\hp\\\\\\\\Downloads\\\\\\\\MINOR_PROJECT_REPORT_FORMAT_JIT.pdf\"',\n",
+       " '{\"text\": \"C:\\\\\\\\Users\\\\\\\\hp\\\\\\\\Desktop\\\\\\\\clg\\\\\\\\Major project final report.pdf\"',\n",
+       " '{\"text\": \"C:\\\\\\\\Users\\\\\\\\hp\\\\\\\\Downloads\\\\\\\\minor project report final (3).pdf\"',\n",
+       " '{\"text\": \"C:\\\\\\\\Users\\\\\\\\hp\\\\\\\\Downloads\\\\\\\\minor project report final (2).pdf\"',\n",
+       " '{\"text\": \"C:\\\\\\\\Users\\\\\\\\hp\\\\\\\\Downloads\\\\\\\\minor project report final (1).pdf\"',\n",
+       " '{\"text\": \"C:\\\\\\\\Users\\\\\\\\hp\\\\\\\\Downloads\\\\\\\\minor project report final.pdf\"',\n",
+       " '{\"text\": \"C:\\\\\\\\Users\\\\\\\\hp\\\\\\\\Desktop\\\\\\\\clg\\\\\\\\MINOR_PROJECT_REPORT_FORMAT_JIT.pdf\"',\n",
+       " '{\"text\": \"C:\\\\\\\\Users\\\\\\\\hp\\\\\\\\Downloads\\\\\\\\MINOR_PROJECT_REPORT_FORMAT_JIT.docx\"']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = vectorstore.similarity_search(\"project report\", k = 10)\n",
+    "clean_results = [res.page_content.split(\", \\\"metadata\\\"\")[0] for res in results]\n",
+    "clean_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "40f1eae9",
    "metadata": {},
    "outputs": [],
    "source": [
     "list = psutil.disk_partitions()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "994733b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list[0].mountpoint"
    ]
   }
  ],
