implemented sementic search engine

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -3441,7 +3441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "77a0c40f",
    "metadata": {},
    "outputs": [
@@ -3450,9 +3450,9 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Scanning drive: C:\\\n",
-      "INFO:root:Found 3381 matching files\n",
+      "INFO:root:Found 3370 matching files\n",
       "INFO:root:Removing existing Chroma DB at ./chroma_db\n",
-      "WARNING:root:Could not remove existing chroma db: [WinError 32] The process cannot access the file because it is being used by another process: './chroma_db\\\\712eb979-bb29-4d1c-a834-0292feb4bd98\\\\data_level0.bin'\n",
+      "INFO:chromadb.telemetry.product.posthog:Anonymized telemetry enabled. See                     https://docs.trychroma.com/telemetry for more information.\n",
       "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
       "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
       "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
@@ -3573,7 +3573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "1c07af45",
    "metadata": {},
    "outputs": [
@@ -3587,20 +3587,50 @@
     {
      "data": {
       "text/plain": [
-       "[Document(id='d1fc87f4-a131-42b8-a43a-d96562a5c1b2', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (3).pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (3).pdf'),\n",
-       " Document(id='fe2ac6fe-8b2b-4ffc-9fa9-ba237ab91e0f', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final.pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final.pdf'),\n",
-       " Document(id='9a984015-4a5c-4e4e-a663-76e3bb19f3f7', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (1).pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (1).pdf'),\n",
-       " Document(id='62deefaf-3614-464f-b79d-14fef3984933', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (2).pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (2).pdf')]"
+       "[Document(id='80572688-f237-41fe-9522-c41b45bb333d', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (3).pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (3).pdf'),\n",
+       " Document(id='c0970598-aba4-4858-a0a2-4bec63e79047', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final.pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final.pdf'),\n",
+       " Document(id='e20343b5-36f8-45bb-8c08-329935d532a4', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (1).pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (1).pdf'),\n",
+       " Document(id='8abbf580-7fc8-48e4-832b-de6ad58e3b30', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (2).pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (2).pdf')]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vectorstore.similarity_search(\"project report\")"
+    "results = vectorstore.similarity_search(\"project report\")\n",
+    "results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b82e6004",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (3).pdf'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results[0].page_content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5d02bcd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3674,6 +3704,50 @@
    ],
    "source": [
     "list[0].mountpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aecd7ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## connecting existing database \n",
+    "embeddings = OpenAIEmbeddings()\n",
+    "vs = Chroma(collection_name=\"paths\", embedding_function=embeddings, persist_directory=\"./chroma_db\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "590d678b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[Document(id='80572688-f237-41fe-9522-c41b45bb333d', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (3).pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (3).pdf'),\n",
+       " Document(id='c0970598-aba4-4858-a0a2-4bec63e79047', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final.pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final.pdf'),\n",
+       " Document(id='e20343b5-36f8-45bb-8c08-329935d532a4', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (1).pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (1).pdf'),\n",
+       " Document(id='8abbf580-7fc8-48e4-832b-de6ad58e3b30', metadata={'path': 'C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (2).pdf'}, page_content='C:\\\\Users\\\\hp\\\\Downloads\\\\minor project report final (2).pdf')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vs.similarity_search(\"project report\")"
    ]
   }
  ],
