using local embedding model

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -3749,6 +3749,135 @@
    "source": [
     "vs.similarity_search(\"project report\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "93d13353",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "api_key = os.getenv(\"HF_TOKEN\")\n",
+    "api_key\n",
+    "embeddings = HuggingFaceEmbeddings(\n",
+    "            model_name=\"sentence-transformers/all-MiniLM-L6-v2\",\n",
+    "            \n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2e0bf690",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HuggingFaceEmbeddings(model_name='sentence-transformers/all-MiniLM-L6-v2', cache_folder=None, model_kwargs={}, encode_kwargs={}, query_encode_kwargs={}, multi_process=False, show_progress=False)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5a9e7345",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading HuggingFace model (this may take a moment on first run)...\n",
+      "Removed HF_TOKEN from environment - using public model without authentication\n",
+      "Using device for embeddings: cpu\n",
+      "Successfully loaded and cached HuggingFace model: sentence-transformers/all-MiniLM-L6-v2\n",
+      "Model cached in: C:\\Users\\hp\\.cache\\huggingface\\local_filesearch_agent\n",
+      "Successfully loaded and cached HuggingFace model: sentence-transformers/all-MiniLM-L6-v2\n",
+      "Model cached in: C:\\Users\\hp\\.cache\\huggingface\\local_filesearch_agent\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "_GLOBAL_HF_EMBEDDINGS_CACHE = None\n",
+    "_GLOBAL_HF_MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "\n",
+    "def get_cached_hf_embeddings():\n",
+    "    \"\"\"Get cached HuggingFace embeddings or create new one.\"\"\"\n",
+    "    global _GLOBAL_HF_EMBEDDINGS_CACHE\n",
+    "    \n",
+    "    if _GLOBAL_HF_EMBEDDINGS_CACHE is not None:\n",
+    "        print(\"Using cached HuggingFace embeddings model\")\n",
+    "        return _GLOBAL_HF_EMBEDDINGS_CACHE\n",
+    "    \n",
+    "    try:\n",
+    "        print(\"Loading HuggingFace model (this may take a moment on first run)...\")\n",
+    "        \n",
+    "        # This model is public and doesn't need authentication\n",
+    "        # Remove any HF_TOKEN from environment to avoid authentication errors\n",
+    "        if \"HF_TOKEN\" in os.environ:\n",
+    "            del os.environ[\"HF_TOKEN\"]\n",
+    "            print(\"Removed HF_TOKEN from environment - using public model without authentication\")\n",
+    "        else:\n",
+    "            print(\"Downloading public model without authentication\")\n",
+    "        \n",
+    "        # Create cache directory for models\n",
+    "        cache_dir = os.path.join(os.path.expanduser(\"~\"), \".cache\", \"huggingface\", \"local_filesearch_agent\")\n",
+    "        os.makedirs(cache_dir, exist_ok=True)\n",
+    "        \n",
+    "        # Check if GPU is available\n",
+    "        try:\n",
+    "            import torch\n",
+    "            device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "            print(f\"Using device for embeddings: {device}\")\n",
+    "        except ImportError:\n",
+    "            device = 'cpu'\n",
+    "            print(\"PyTorch not available, using CPU\")\n",
+    "        \n",
+    "        embeddings = HuggingFaceEmbeddings(\n",
+    "            model_name=_GLOBAL_HF_MODEL_NAME,\n",
+    "            cache_folder=cache_dir,\n",
+    "            model_kwargs={'device': device},\n",
+    "            # encode_kwargs={'normalize_embeddings': True}\n",
+    "        )\n",
+    "        \n",
+    "        # Cache the embeddings instance\n",
+    "        _GLOBAL_HF_EMBEDDINGS_CACHE = embeddings\n",
+    "        print(f\"Successfully loaded and cached HuggingFace model: {_GLOBAL_HF_MODEL_NAME}\")\n",
+    "        print(f\"Model cached in: {cache_dir}\")\n",
+    "        return embeddings\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed to load HuggingFace embeddings: {e}\")\n",
+    "        print(\"Falling back to OpenAI embeddings\")\n",
+    "        return OpenAIEmbeddings()\n",
+    "\n",
+    "def clear_global_hf_cache():\n",
+    "    \"\"\"Clear the global HuggingFace embeddings cache.\"\"\"\n",
+    "    global _GLOBAL_HF_EMBEDDINGS_CACHE\n",
+    "    _GLOBAL_HF_EMBEDDINGS_CACHE = None\n",
+    "    print(\"Global HuggingFace embeddings cache cleared\")\n",
+    "\n",
+    "embeddings = get_cached_hf_embeddings()\n"
+   ]
   }
  ],
  "metadata": {
